Fixed gedit and menu issues
1. Fixed gedit Document panel row close button color issues
2. Removed gedit-search-entry-occurrences-tag ugly border
3. Removed firefox rounded menu corners
4. Removed menu overflow arrow button extra space

--- a/Communitheme/gtk-3.0/_common.scss
+++ b/Communitheme/gtk-3.0/_common.scss
@@ -2290,7 +2290,7 @@ menu,
     }
 
     &.bottom {
-      // margin-bottom: -6px;
+      margin-bottom: -8px;
       border-top: 1px solid mix($fg_color, $base_color, 10%);
       border-bottom-right-radius: $small_radius;
       border-bottom-left-radius: $small_radius;
@@ -2319,8 +2319,10 @@ menuitem {
   }
 }
 
-window.background:not(.csd) { // firefox menu
-  .menu { border: none; }
+window.background:not(.csd) {
+  // Firefox menu
+  > menu, .menu { border: none; } // Removed ugly menu borders
+  > menu > menuitem { border-radius: 0; } // Removed rounded menu corners
 }
 
 /***************
